Agrego soporte markdown

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extension-serve",
   "description": "serve static or compiling or transforming by extension",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": {
     "name": "Emilio Platzer",
     "email": "emilioplatzer@outlook.com"
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "extension-serve-static": ">=0.1.6",
+    "highlight.js": "^8.6.0",
+    "jade": "^1.11.0",
+    "marked": "^0.3.3",
+    "pygmentize-bundled": "^2.3.0",
     "send": "^0.13.0"
   },
   "main": "bin/extension-serve.js",
